# DLR_ROS2_CARLA

./: .gitignore  diagram
install/: local_setup.sh  setup.sh
install/carla_parking_msgs/share/carla_parking_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/carla_parking_nodes/lib/carla_parking_nodes/: carla_interface_node  keyboard_control_node  parking_map_node  sensor_viewer_node  spawn_vehicle_node
install/carla_parking_nodes/share/carla_parking_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/carla_parking_msgs/: CMakeLists.txt
src/carla_parking_msgs/msg/: VehicleControl.msg
src/carla_parking_nodes/: setup.cfg  setup.py
src/carla_parking_nodes/carla_parking_nodes/: carla_interface_node.py  data_logger_node.py  geometric_controller_node.py  joystick_control_node.py  keyboard_control_node.py  parking_controller_node.py  parking_map_node.py  reeds_shepp_path_planning.py  sensor_viewer_node.py
src/carla_parking_nodes/other_scripts/: blueprint_check.py  build_static_occupancy_map.py  controler_test.py  grid_alignement.py  gtid_occupancy_builder.py  parking_map_node.py  parking_slots.py  reeds_test.py  rgb_cam.py  semantic_camera.py  spawn_vehicle_nodeXX.py  training_test.py  xbox.py  xbox_map_test.py
src/carla_parking_nodes/static_maps/final/: H_img_to_world.npy  H_world_to_img.npy  clicked_image_points.npy  parking_occupancy.npy  world_points.npy
src/carla_parking_nodes/static_maps/labels/: label_1.npy  (+14 more)
training/: training.py
(+28 files in other folders)
